<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_15dp"
    android:layout_marginLeft="@dimen/margin_15dp"
    android:layout_marginRight="@dimen/margin_15dp"
    android:layout_marginBottom="@dimen/margin_15dp"
    tools:context="com.example.tomas.telesna.PhysicalDisplayResults">

    <LinearLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorFAF0E6"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/result_coz_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5dp"
            android:text="@string/coz"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/result_header_text_size"/>
        <TextView
            android:layout_width="@dimen/result_meno_width"
            android:layout_height="wrap_content"
            android:text="@string/meno"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/result_header_text_size"/>
        <TextView
            android:layout_width="@dimen/result_skupina_width"
            android:layout_height="wrap_content"
            android:text="@string/skupina_tv"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="@dimen/result_hrazda_width"
            android:layout_height="wrap_content"
            android:text="@string/hrazda"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/result_header_text_size"/>
        <TextView
            android:layout_width="@dimen/result_skok_width"
            android:layout_height="wrap_content"
            android:text="@string/skok"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/result_header_text_size"/>
        <TextView
            android:layout_width="@dimen/result_brusaky_width"
            android:layout_height="wrap_content"
            android:text="@string/brusaky"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="@dimen/result_sprint_width"
            android:layout_height="wrap_content"
            android:text="@string/sprint"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="@dimen/result_beh_width"
            android:layout_height="wrap_content"
            android:text="@string/beh"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="@dimen/result_plavanie_width"
            android:layout_height="wrap_content"
            android:text="@string/plavanie"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="@dimen/result_body_width"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:textSize="@dimen/result_header_text_size"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/result_LL_height"
        android:layout_below="@id/table_header"
        android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tableTelesna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">
        </TableLayout>
    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/scrollView"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_new_session"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/ukonc_telesnu"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/button_result_text_size"
            android:textStyle="bold"
            android:background="@drawable/roundedbuttonactive"
            android:onClick="alertUser"
            style="@android:style/Widget.Holo.ActionButton.TextButton"/>

        <Button
            android:id="@+id/b_back"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/spat"
            android:layout_marginStart="@dimen/margin_20dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/button_result_text_size"
            android:background="@drawable/roundedbuttongreen"
            style="@android:style/Widget.Holo.ActionButton.TextButton"
            android:onClick="goBack"/>
    </LinearLayout>

</RelativeLayout>
