<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timer_layout"
    android:layout_width="@dimen/timer_LL_width"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stopky"
            android:background="@drawable/timer_button_shape"
            android:layout_marginStart="@dimen/margin_5dp"
            android:textSize="@dimen/timer_text_size"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_10dp"
            style="@android:style/Widget.Holo.ActionButton.TextButton"/>
        </RelativeLayout>

        <Button
            android:id="@+id/b_round"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/koniec_12min"
            android:textSize="@dimen/button_undo_startTimer_text_size"
            android:background="@drawable/timer_button_shape"
            android:layout_marginStart="@dimen/margin_10dp"
            style="@android:style/Widget.Holo.ActionButton.TextButton"/>

        <Button
            android:id="@+id/btn_undo"
            android:layout_width="@dimen/button_undo_startTimer_width"
            android:layout_height="wrap_content"
            android:text="@string/spat"
            android:background="@drawable/timer_button_shape"
            android:enabled="false"
            android:textSize="@dimen/button_undo_startTimer_text_size"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_10dp"
            style="@android:style/Widget.Holo.ActionButton.TextButton"/>

        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="@dimen/button_undo_startTimer_width"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@drawable/timer_button_shape"
            android:textSize="@dimen/button_undo_startTimer_text_size"
            style="@android:style/Widget.Holo.ActionButton.TextButton"
            android:layout_marginStart="@dimen/margin_10dp"/>


</LinearLayout>