<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/person_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color00FFFF">

    <RelativeLayout
        android:id="@+id/number_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <TextView
                android:id="@+id/text_dress_number"
                android:layout_width="@dimen/person_dress_number_width"
                android:layout_height="@dimen/person_dress_number_height"
                android:textSize="@dimen/view_UpDown_text_size"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:gravity="center"
                android:singleLine="true"
                android:background="@color/colorBlue"/>
            <Button
                android:id="@+id/b_down"
                android:layout_width="@dimen/button_UpDown_size"
                android:layout_height="@dimen/button_UpDown_size"
                android:textSize="@dimen/button_UpDown_text_size"
                android:text="@string/minus"
                android:layout_below="@+id/text_dress_number"
                android:background="@color/colorBlue"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/margin_5dp"/>
            <Button
                android:id="@+id/b_up"
                android:layout_width="@dimen/button_UpDown_size"
                android:layout_height="@dimen/button_UpDown_size"
                android:textSize="@dimen/button_UpDown_text_size"
                android:layout_below="@+id/text_dress_number"
                android:text="@string/plus"
                android:background="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_5dp"
                android:layout_marginStart="@dimen/person_btn_up_marginL"
                android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_datum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/datum_previerok"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <TextView
                android:id="@+id/edit_datum"
                android:layout_width="@dimen/person_edit_datum_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_datum"
                android:textSize="@dimen/person_edit_text_size"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_coz_text_marginL"
                android:text="@string/coz"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/edit_id"
                android:layout_width="@dimen/person_edit_coz_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_coz_marginL"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_id"
                android:textSize="@dimen/person_edit_text_size"
                android:maxLength="6"
                android:inputType="number"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/text_hodnost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_hodnost_text_marginL"
                android:text="@string/hodnost"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"
                android:singleLine="true"/>
            <Spinner
                android:id="@+id/spinner_hodnost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_hodnost_marginL"
                android:layout_below="@+id/text_datum"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_meno_text_marginL"
                android:text="@string/meno"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/edit_name"
                android:layout_width="@dimen/person_edit_meno_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_name"
                android:textSize="@dimen/person_edit_text_size"
                android:singleLine="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5dp">

            <TextView
                android:id="@+id/text_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:text="@string/odbor"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <Spinner
                android:id="@+id/spinner_odbor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_5dp"
                android:layout_below="@+id/text_section"/>

            <TextView
                android:id="@+id/text_born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_born_text_marginL"
                android:text="@string/narodeny"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <EditText
                android:id="@+id/edit_born"
                android:layout_width="@dimen/person_edit_born_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_born_marginL"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_born"
                android:textSize="@dimen/person_edit_text_size"
                android:maxLength="4"
                android:inputType="number"
                android:singleLine="true"/>


            <TextView
                android:id="@+id/text_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_group_text_marginL"
                android:text="@string/skupina"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <com.example.tomas.strelby.SelectionButton
                android:id="@+id/btn_group"
                android:layout_width="@dimen/person_edit_group_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_group_marginL"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_group"
                android:textSize="@dimen/person_edit_text_size"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/text_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_gender_text_marginL"
                android:text="@string/pohlavie"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <com.example.tomas.strelby.SelectionButton
                android:id="@+id/btn_gender"
                android:layout_width="@dimen/person_edit_gender_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_gender_marginL"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_gender"
                android:textSize="@dimen/person_edit_text_size"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/text_gun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_gun_text_marginL"
                android:text="@string/zbran"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/person_text_size"/>
            <com.example.tomas.strelby.SelectionButton
                android:id="@+id/btn_gun"
                android:layout_width="@dimen/person_edit_gun_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/person_edit_gun_marginL"
                android:background="@android:drawable/editbox_background"
                android:layout_below="@+id/text_gun"
                android:textSize="@dimen/person_edit_text_size"
                android:singleLine="true"/>

            <Button
                android:id="@+id/b_add_person"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15dp"
                android:textSize="@dimen/button_text_size"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorWhite"
                android:text="@string/pridaj_osobu"
                android:background="@drawable/button_osoba"
                style="@android:style/Widget.Holo.ActionButton.TextButton"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>